devops/k8s/yamls/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: batch
---
apiVersion: v1
kind: Pod
metadata:
   name: nginx
   namespace: batch
spec:
   volumes:
   - name: vol-cm1
     configMap:
       name: logs-config



   containers:
   -  name: nginx
      image: nginx:1.21.1
