devops/k8s/yamls/daemonset-2.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
   labels:
      app: elasticsearch
   name: elasticsearch
   namespace: kube-system
spec:
   selector:
      matchLabels:
         app: elasticsearch
   template:
      metadata:
         labels:
            app: elasticsearch
      spec:
         containers:
         -  image: registry.k8s.io/fluentd-elasticsearch:1.20
            name: fluentd-elasticsearch
            resources: {}
status: {}
