devops/k8s/yamls/deployment-sample1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   creationTimestamp: null
   labels:
      app: nginx
   name: nginx
spec:
   replicas: 2
   selector:
      matchLabels:
         app: nginx
   strategy:
      rollingUpdate:
         maxSurge: 25%
         maxUnavailable: 25%
      type: RollingUpdate
   template:
      metadata:
         creationTimestamp: null
         labels:
            app: nginx
      spec:
         containers:
         -  image: nginx
            name: nginx
            resources: {}
status: {}
