devops/k8s/yamls/pod-nodeName.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
spec:
  nodeName: node01
  containers:
  -  image: nginx
     name: nginx
