devops/k8s/yamls/pod-pvc2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
 containers:
   - name: nginx
     image: nginx:alpine
     volumeMounts:
       - name: local-pv
         mountPath: /var/www/html
 volumes:
   - name: local-pv
     persistentVolumeClaim:
        claimName: local-pvc
