devops/k8s/yamls/pod-static2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-busybox
  namespace: default
spec: # keep this yaml in staticPodYamls folder
  containers:
  - command:
    - sleep
    - "1000"
    image: busybox
    name: static-busybox
