devops/k8s/yamls/pod-vol-claim.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busy-box-vol
spec: 
  containers:
  - name: mybusy-box
    image: busybox
    command: ["echo 'hello' >> /log/app.log; sleep 300; cat /log/app.log "]
    volumeMounts:
      - mountPath: /log
        name: log-val
  volumes:
    - name: log-val
      persistentVolumeClaim:
        claimName: claim-log-1
