devops/k8s/yamls/pod-vol-secret-2.yaml
apiVersion: v1
kind: Pod
metadata:
   labels:
      run: secret-1401
   name: secret-1401
   namespace: admin1401
spec:
   volumes:
   -  name: secret-volume
      secret: # secret volume
         secretName: dotfile-secret
   containers:
   -  command:
      - sleep
      - '4800'
      image: busybox
      name: secret-admin
      volumeMounts:
      -  name: secret-volume # volumes' mount path
         readOnly: true
         mountPath: /etc/secret-volume
