devops/k8s/yamls/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: incoming
   namespace: external
   annotations:
      kubernetes.io/ingress.class: nginx
spec:
   rules:
   -  host: cka.raman.com
      http:
         paths:
         -  path: /
            pathType: Prefix
            backend:
               service:
                  name: echoserver
                  port:
                     number: 80
