devops/k8s/yamls/ingress4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: myingress
spec:
   rules:
   -  host: my-star.com
      http:
         paths:
         -  backend:
               service:
                  name: my-core-service
                  port:
                     number: 8080
            path: /mycore/api
            pathType: Exact
